# QDelegate

./: CMakeLists.txt  LICENCE  QDelegate.pri  QDelegate.pro  README.md
include/: qdelegate.h
src/: main.cpp
